ENA-6309: read collection_date and geo_loc_name from sample if available for all assemblies