@@ -42,6 +42,6 @@ public class CodonTest {
     Codon codon = new Codon();
     assertNull(codon.getAminoAcid());
     codon.setAminoAcid('A');
-    assertEquals(new Character('A'), codon.getAminoAcid());
+    assertEquals(Character.valueOf('A'), codon.getAminoAcid());
   }
 }
